Funcion mostrarProductos en Home Parte 1

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/footer.css">
     <title>WorkWave Store</title>
 </head>
-<body>
+<body class="home">
     <header id="header" class="header">
         <div class="sectionContenedor headerContenedor">
             <div class="logo">
@@ -86,22 +86,24 @@
                     <a href="">></a>
                 </nav>
             </header>
-            <article class="cardProducto">
-                <img src="./img/productos/Auriculares Huawei Freebuds 6I Black.webp" alt="">
-                <h3>Laptop Pro 14"</h3>
-                <p class="productoDescripción">Ideal para edición y programación. Potencia y portabilidad.</p>
-                <div class="precio">
-                    <p class="precioRegular">$1499</p>
-                    <p class="precioDescuento">$999</p>
-                </div>
-                <div class="botones">
-                    <a href="./producto.html" class="btnCarrito">Ver más</a>
-                    <button class="wishlist">
-                        <svg stroke="currentColor" stroke-width="0.5" fill="none" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><path clip-rule="evenodd" d="m49.2944 25.7212c-7.42-7.4199-19.4501-7.4199-26.8701 0-7.4199 7.42-7.4199 19.4501 0 26.8701l25.2079 25.2093c1.1715 1.1716 3.0708 1.1717 4.2425.0003l25.2109-25.2063c7.4199-7.4199 7.4199-19.4501 0-26.87-7.4189-7.4189-19.4465-7.42-26.8667-.0034l-.0034.0034c-.2534.2534-.6677.2501-.9211-.0034zm25.6699 24.7521c6.2484-6.2484 6.2484-16.379 0-22.6274s-16.3791-6.2484-22.6275 0l-.4588.4589c-1.1716 1.1716-3.0711 1.1716-4.2427 0l-.4622-.4623c-6.2484-6.2483-16.379-6.2483-22.6274 0-6.2484 6.2484-6.2484 16.3791 0 22.6275l23.0865 23.0867c1.1715 1.1715 3.0708 1.1716 4.2424.0003z" fill="rgb(0,0,0)" fill-rule="evenodd"></path></svg>
-                    </button>
-                </div>
-            </article>
-            <article class="cardProducto">
+            <div class="cardProductoOferta">
+                <!-- <article class="cardProducto cardProductoOferta">
+                    <img src="./img/productos/Auriculares Huawei Freebuds 6I Black.webp" alt="">
+                    <h3>Laptop Pro 14"</h3>
+                    <p class="productoDescripción">Ideal para edición y programación. Potencia y portabilidad.</p>
+                    <div class="precio">
+                        <p class="precioRegular">$1499</p>
+                        <p class="precioDescuento">$999</p>
+                    </div>
+                    <div class="botones">
+                        <a href="./producto.html" class="btnCarrito">Ver más</a>
+                        <button class="wishlist">
+                            <svg stroke="currentColor" stroke-width="0.5" fill="none" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><path clip-rule="evenodd" d="m49.2944 25.7212c-7.42-7.4199-19.4501-7.4199-26.8701 0-7.4199 7.42-7.4199 19.4501 0 26.8701l25.2079 25.2093c1.1715 1.1716 3.0708 1.1717 4.2425.0003l25.2109-25.2063c7.4199-7.4199 7.4199-19.4501 0-26.87-7.4189-7.4189-19.4465-7.42-26.8667-.0034l-.0034.0034c-.2534.2534-.6677.2501-.9211-.0034zm25.6699 24.7521c6.2484-6.2484 6.2484-16.379 0-22.6274s-16.3791-6.2484-22.6275 0l-.4588.4589c-1.1716 1.1716-3.0711 1.1716-4.2427 0l-.4622-.4623c-6.2484-6.2483-16.379-6.2483-22.6274 0-6.2484 6.2484-6.2484 16.3791 0 22.6275l23.0865 23.0867c1.1715 1.1715 3.0708 1.1716 4.2424.0003z" fill="rgb(0,0,0)" fill-rule="evenodd"></path></svg>
+                        </button>
+                    </div>
+                </article> -->
+            </div>
+            <!-- <article class="cardProducto cardProductoOferta">
                 <img src="https://dummyimage.com/480x4:3/" alt="">
                 <h3>Silla Ergonómica XL</h3>
                 <p class="productoDescripción">Máxima comodidad para largas jornadas frente al escritorio.</p>
@@ -116,7 +118,7 @@
                     </button>
                 </div>
             </article>
-            <article class="cardProducto">
+            <article class="cardProducto cardProductoOferta">
                 <img src="https://dummyimage.com/480x4:3/" alt="">
                 <h3>Tablet Gráfica XP</h3>
                 <p class="productoDescripción">Precisión y sensibilidad para ilustradores y diseñadores.</p>
@@ -131,7 +133,7 @@
                     </button>
                 </div>
             </article>
-            <article class="cardProducto">
+            <article class="cardProducto cardProductoOferta">
                 <img src="https://dummyimage.com/480x4:3/" alt="">
                 <h3>Lámpara LED Ajustable</h3>
                 <p class="productoDescripción">Iluminación adaptable a cualquier espacio de trabajo.</p>
@@ -145,7 +147,7 @@
                         <svg stroke="currentColor" stroke-width="0.5" fill="none" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><path clip-rule="evenodd" d="m49.2944 25.7212c-7.42-7.4199-19.4501-7.4199-26.8701 0-7.4199 7.42-7.4199 19.4501 0 26.8701l25.2079 25.2093c1.1715 1.1716 3.0708 1.1717 4.2425.0003l25.2109-25.2063c7.4199-7.4199 7.4199-19.4501 0-26.87-7.4189-7.4189-19.4465-7.42-26.8667-.0034l-.0034.0034c-.2534.2534-.6677.2501-.9211-.0034zm25.6699 24.7521c6.2484-6.2484 6.2484-16.379 0-22.6274s-16.3791-6.2484-22.6275 0l-.4588.4589c-1.1716 1.1716-3.0711 1.1716-4.2427 0l-.4622-.4623c-6.2484-6.2483-16.379-6.2483-22.6274 0-6.2484 6.2484-6.2484 16.3791 0 22.6275l23.0865 23.0867c1.1715 1.1715 3.0708 1.1716 4.2424.0003z" fill="rgb(0,0,0)" fill-rule="evenodd"></path></svg>
                     </button>
                 </div>
-            </article>
+            </article> -->
         </section>
         <section class="sectionContenedor categorias">
             <header>
