Funcion mostrarProductos en Home Parte 2. Sección Ofertas Trueno finalizada.

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                     <h2>Ofertas Trueno</h2>
                 </div>
                 <nav>
-                    <a href=""><</a>
-                    <a href="">></a>
+                    <a class="botonIzquierda"><</a>
+                    <a class="botonDerecha">></a>
                 </nav>
             </header>
             <div class="cardProductoOferta">
@@ -156,8 +156,8 @@
                     <h2>Categorías</h2>
                 </div>
                 <nav>
-                    <a href=""><</a>
-                    <a href="">></a>
+                    <a class="botonIzquierda"><</a>
+                    <a class="botonDerecha">></a>
                 </nav>
             </header>
             <article class="categoriaItem">
@@ -211,8 +211,8 @@
                     <h2>Más Vendidos</h2>
                 </div>
                 <nav>
-                    <a href=""><</a>
-                    <a href="">></a>
+                    <a class="botonIzquierda"><</a>
+                    <a class="botonDerecha">></a>
                 </nav>
             </header>
             <article class="cardProducto">
@@ -400,8 +400,8 @@
                     <h2>Explora nuestros productos</h2>
                 </div>
                 <nav>
-                    <a href=""><</a>
-                    <a href="">></a>
+                    <a class="botonIzquierda"><</a>
+                    <a class="botonDerecha">></a>
                 </nav>
             </header>
             <article class="cardProducto">
@@ -524,8 +524,8 @@
                     <h2>Últimos Ingresos</h2>
                 </div>
                 <nav>
-                    <a href=""><</a>
-                    <a href="">></a>
+                    <a class="botonIzquierda"><</a>
+                    <a class="botonDerecha">></a>
                 </nav>
             </header>
             <article class="flyerNuevosProductos1">
