--- a/ofertas.html
+++ b/ofertas.html
@@ -70,8 +70,8 @@
                 <h2>Explora nuestros productos</h2>
             </div>
             <nav>
-                <a href=""><</a>
-                <a href="">></a>
+                <a class="botonIzquierda"><</a>
+                <a class="botonDerecha">></a>
             </nav>
         </header>
         <article class="cardProducto">
