--- a/ofertas.html
+++ b/ofertas.html
@@ -10,11 +10,10 @@
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/breadcrumbs.css">
     <link rel="stylesheet" href="./css/estilosHome.css">
-    <link rel="stylesheet" href="./css/queriesHome.css">
     <link rel="stylesheet" href="./css/footer.css">
     <title>Ofertas</title>
 </head>
-<body>
+<body class="Ofertas">
     <header id="header" class="header">
         <div class="sectionContenedor headerContenedor">
             <div class="logo">
@@ -67,125 +66,16 @@
         <header>
             <div class="titulos">
                 <h4>Productos</h4>
-                <h2>Explora nuestros productos</h2>
+                <h2>Aprovecha estas OFERTAS</h2>
             </div>
             <nav>
                 <a class="botonIzquierda"><</a>
                 <a class="botonDerecha">></a>
             </nav>
         </header>
-        <article class="cardProducto">
-            <img src="https://dummyimage.com/480x4:3/" alt="">
-            <h3>Mini Proyector Portátil 1080p</h3>
-            <p class="productoDescripción">Perfecto para presentaciones o entretenimiento en cualquier lugar.</p>
-            <div class="precio">
-                <p class="precioDescuento">$189</p>
-            </div>
-            <div class="botones">
-                    <a href="./producto.html" class="btnCarrito">Ver más</a>
-                    <button class="wishlist">
-                        <svg stroke="currentColor" stroke-width="0.5" fill="none" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><path clip-rule="evenodd" d="m49.2944 25.7212c-7.42-7.4199-19.4501-7.4199-26.8701 0-7.4199 7.42-7.4199 19.4501 0 26.8701l25.2079 25.2093c1.1715 1.1716 3.0708 1.1717 4.2425.0003l25.2109-25.2063c7.4199-7.4199 7.4199-19.4501 0-26.87-7.4189-7.4189-19.4465-7.42-26.8667-.0034l-.0034.0034c-.2534.2534-.6677.2501-.9211-.0034zm25.6699 24.7521c6.2484-6.2484 6.2484-16.379 0-22.6274s-16.3791-6.2484-22.6275 0l-.4588.4589c-1.1716 1.1716-3.0711 1.1716-4.2427 0l-.4622-.4623c-6.2484-6.2483-16.379-6.2483-22.6274 0-6.2484 6.2484-6.2484 16.3791 0 22.6275l23.0865 23.0867c1.1715 1.1715 3.0708 1.1716 4.2424.0003z" fill="rgb(0,0,0)" fill-rule="evenodd"></path></svg>
-                    </button>
-                </div>
-        </article>
-        <article class="cardProducto">
-            <img src="https://dummyimage.com/480x4:3/" alt="">
-            <h3>Pizarra Digital Interactiva</h3>
-            <p class="productoDescripción">Ideal para reuniones colaborativas y presentaciones en equipo.</p>
-            <div class="precio">
-                <p class="precioDescuento">$419</p>
-            </div>
-            <div class="botones">
-                    <a href="./producto.html" class="btnCarrito">Ver más</a>
-                    <button class="wishlist">
-                        <svg stroke="currentColor" stroke-width="0.5" fill="none" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><path clip-rule="evenodd" d="m49.2944 25.7212c-7.42-7.4199-19.4501-7.4199-26.8701 0-7.4199 7.42-7.4199 19.4501 0 26.8701l25.2079 25.2093c1.1715 1.1716 3.0708 1.1717 4.2425.0003l25.2109-25.2063c7.4199-7.4199 7.4199-19.4501 0-26.87-7.4189-7.4189-19.4465-7.42-26.8667-.0034l-.0034.0034c-.2534.2534-.6677.2501-.9211-.0034zm25.6699 24.7521c6.2484-6.2484 6.2484-16.379 0-22.6274s-16.3791-6.2484-22.6275 0l-.4588.4589c-1.1716 1.1716-3.0711 1.1716-4.2427 0l-.4622-.4623c-6.2484-6.2483-16.379-6.2483-22.6274 0-6.2484 6.2484-6.2484 16.3791 0 22.6275l23.0865 23.0867c1.1715 1.1715 3.0708 1.1716 4.2424.0003z" fill="rgb(0,0,0)" fill-rule="evenodd"></path></svg>
-                    </button>
-                </div>
-        </article>
-        <article class="cardProducto">
-            <img src="https://dummyimage.com/480x4:3/" alt="">
-            <h3>Router WiFi 6 de Alta Velocidad</h3>
-            <p class="productoDescripción">Conectividad estable y rápida para múltiples dispositivos.</p>
-            <div class="precio">
-                <p class="precioDescuento">$129</p>
-            </div>
-            <div class="botones">
-                    <a href="./producto.html" class="btnCarrito">Ver más</a>
-                    <button class="wishlist">
-                        <svg stroke="currentColor" stroke-width="0.5" fill="none" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><path clip-rule="evenodd" d="m49.2944 25.7212c-7.42-7.4199-19.4501-7.4199-26.8701 0-7.4199 7.42-7.4199 19.4501 0 26.8701l25.2079 25.2093c1.1715 1.1716 3.0708 1.1717 4.2425.0003l25.2109-25.2063c7.4199-7.4199 7.4199-19.4501 0-26.87-7.4189-7.4189-19.4465-7.42-26.8667-.0034l-.0034.0034c-.2534.2534-.6677.2501-.9211-.0034zm25.6699 24.7521c6.2484-6.2484 6.2484-16.379 0-22.6274s-16.3791-6.2484-22.6275 0l-.4588.4589c-1.1716 1.1716-3.0711 1.1716-4.2427 0l-.4622-.4623c-6.2484-6.2483-16.379-6.2483-22.6274 0-6.2484 6.2484-6.2484 16.3791 0 22.6275l23.0865 23.0867c1.1715 1.1715 3.0708 1.1716 4.2424.0003z" fill="rgb(0,0,0)" fill-rule="evenodd"></path></svg>
-                    </button>
-                </div>
-        </article>
-        <article class="cardProducto">
-            <img src="https://dummyimage.com/480x4:3/" alt="">
-            <h3>Almohadilla de Escritorio Antideslizante</h3>
-            <p class="productoDescripción">Protege tu escritorio y mejora la comodidad de uso.</p>
-            <div class="precio">
-                <p class="precioDescuento">$29</p>
-            </div>
-            <div class="botones">
-                    <a href="./producto.html" class="btnCarrito">Ver más</a>
-                    <button class="wishlist">
-                        <svg stroke="currentColor" stroke-width="0.5" fill="none" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><path clip-rule="evenodd" d="m49.2944 25.7212c-7.42-7.4199-19.4501-7.4199-26.8701 0-7.4199 7.42-7.4199 19.4501 0 26.8701l25.2079 25.2093c1.1715 1.1716 3.0708 1.1717 4.2425.0003l25.2109-25.2063c7.4199-7.4199 7.4199-19.4501 0-26.87-7.4189-7.4189-19.4465-7.42-26.8667-.0034l-.0034.0034c-.2534.2534-.6677.2501-.9211-.0034zm25.6699 24.7521c6.2484-6.2484 6.2484-16.379 0-22.6274s-16.3791-6.2484-22.6275 0l-.4588.4589c-1.1716 1.1716-3.0711 1.1716-4.2427 0l-.4622-.4623c-6.2484-6.2483-16.379-6.2483-22.6274 0-6.2484 6.2484-6.2484 16.3791 0 22.6275l23.0865 23.0867c1.1715 1.1715 3.0708 1.1716 4.2424.0003z" fill="rgb(0,0,0)" fill-rule="evenodd"></path></svg>
-                    </button>
-                </div>
-        </article>
-        <article class="cardProducto">
-            <img src="https://dummyimage.com/480x4:3/" alt="">
-            <h3>Organizador de Cables Magnético</h3>
-            <p class="productoDescripción">Mantén tus cables organizados y sin enredos en tu espacio de trabajo.</p>
-            <div class="precio">
-                <p class="precioDescuento">$49</p>
-            </div>
-            <div class="botones">
-                    <a href="./producto.html" class="btnCarrito">Ver más</a>
-                    <button class="wishlist">
-                        <svg stroke="currentColor" stroke-width="0.5" fill="none" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><path clip-rule="evenodd" d="m49.2944 25.7212c-7.42-7.4199-19.4501-7.4199-26.8701 0-7.4199 7.42-7.4199 19.4501 0 26.8701l25.2079 25.2093c1.1715 1.1716 3.0708 1.1717 4.2425.0003l25.2109-25.2063c7.4199-7.4199 7.4199-19.4501 0-26.87-7.4189-7.4189-19.4465-7.42-26.8667-.0034l-.0034.0034c-.2534.2534-.6677.2501-.9211-.0034zm25.6699 24.7521c6.2484-6.2484 6.2484-16.379 0-22.6274s-16.3791-6.2484-22.6275 0l-.4588.4589c-1.1716 1.1716-3.0711 1.1716-4.2427 0l-.4622-.4623c-6.2484-6.2483-16.379-6.2483-22.6274 0-6.2484 6.2484-6.2484 16.3791 0 22.6275l23.0865 23.0867c1.1715 1.1715 3.0708 1.1716 4.2424.0003z" fill="rgb(0,0,0)" fill-rule="evenodd"></path></svg>
-                    </button>
-                </div>
-        </article>
-        <article class="cardProducto">
-            <img src="https://dummyimage.com/480x4:3/" alt="">
-            <h3>Cámara Web 4K con Micrófono</h3>
-            <p class="productoDescripción">Calidad de video profesional para videollamadas y transmisiones en vivo.</p>
-            <div class="precio">
-                <p class="precioDescuento">$159</p>
-            </div>
-            <div class="botones">
-                    <a href="./producto.html" class="btnCarrito">Ver más</a>
-                    <button class="wishlist">
-                        <svg stroke="currentColor" stroke-width="0.5" fill="none" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><path clip-rule="evenodd" d="m49.2944 25.7212c-7.42-7.4199-19.4501-7.4199-26.8701 0-7.4199 7.42-7.4199 19.4501 0 26.8701l25.2079 25.2093c1.1715 1.1716 3.0708 1.1717 4.2425.0003l25.2109-25.2063c7.4199-7.4199 7.4199-19.4501 0-26.87-7.4189-7.4189-19.4465-7.42-26.8667-.0034l-.0034.0034c-.2534.2534-.6677.2501-.9211-.0034zm25.6699 24.7521c6.2484-6.2484 6.2484-16.379 0-22.6274s-16.3791-6.2484-22.6275 0l-.4588.4589c-1.1716 1.1716-3.0711 1.1716-4.2427 0l-.4622-.4623c-6.2484-6.2483-16.379-6.2483-22.6274 0-6.2484 6.2484-6.2484 16.3791 0 22.6275l23.0865 23.0867c1.1715 1.1715 3.0708 1.1716 4.2424.0003z" fill="rgb(0,0,0)" fill-rule="evenodd"></path></svg>
-                    </button>
-                </div>
-        </article>
-        <article class="cardProducto">
-            <img src="https://dummyimage.com/480x4:3/" alt="">
-            <h3>Pad de Carga Inalámbrica Rápida</h3>
-            <p class="productoDescripción">Carga tu teléfono mientras trabajas sin necesidad de cables.</p>
-            <div class="precio">
-                <p class="precioDescuento">$69</p>
-            </div>
-            <div class="botones">
-                    <a href="./producto.html" class="btnCarrito">Ver más</a>
-                    <button class="wishlist">
-                        <svg stroke="currentColor" stroke-width="0.5" fill="none" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><path clip-rule="evenodd" d="m49.2944 25.7212c-7.42-7.4199-19.4501-7.4199-26.8701 0-7.4199 7.42-7.4199 19.4501 0 26.8701l25.2079 25.2093c1.1715 1.1716 3.0708 1.1717 4.2425.0003l25.2109-25.2063c7.4199-7.4199 7.4199-19.4501 0-26.87-7.4189-7.4189-19.4465-7.42-26.8667-.0034l-.0034.0034c-.2534.2534-.6677.2501-.9211-.0034zm25.6699 24.7521c6.2484-6.2484 6.2484-16.379 0-22.6274s-16.3791-6.2484-22.6275 0l-.4588.4589c-1.1716 1.1716-3.0711 1.1716-4.2427 0l-.4622-.4623c-6.2484-6.2483-16.379-6.2483-22.6274 0-6.2484 6.2484-6.2484 16.3791 0 22.6275l23.0865 23.0867c1.1715 1.1715 3.0708 1.1716 4.2424.0003z" fill="rgb(0,0,0)" fill-rule="evenodd"></path></svg>
-                    </button>
-                </div>
-        </article>
-        <article class="cardProducto">
-            <img src="https://dummyimage.com/480x4:3/" alt="">
-            <h3>Estación de Anclaje USB-C Multifuncional</h3>
-            <p class="productoDescripción">Conecta todos tus dispositivos con un solo puerto. Ideal para laptops modernas.</p>
-            <div class="precio">
-                <p class="precioDescuento">$79</p>
-            </div>
-            <div class="botones">
-                    <a href="./producto.html" class="btnCarrito">Ver más</a>
-                    <button class="wishlist">
-                        <svg stroke="currentColor" stroke-width="0.5" fill="none" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><path clip-rule="evenodd" d="m49.2944 25.7212c-7.42-7.4199-19.4501-7.4199-26.8701 0-7.4199 7.42-7.4199 19.4501 0 26.8701l25.2079 25.2093c1.1715 1.1716 3.0708 1.1717 4.2425.0003l25.2109-25.2063c7.4199-7.4199 7.4199-19.4501 0-26.87-7.4189-7.4189-19.4465-7.42-26.8667-.0034l-.0034.0034c-.2534.2534-.6677.2501-.9211-.0034zm25.6699 24.7521c6.2484-6.2484 6.2484-16.379 0-22.6274s-16.3791-6.2484-22.6275 0l-.4588.4589c-1.1716 1.1716-3.0711 1.1716-4.2427 0l-.4622-.4623c-6.2484-6.2483-16.379-6.2483-22.6274 0-6.2484 6.2484-6.2484 16.3791 0 22.6275l23.0865 23.0867c1.1715 1.1715 3.0708 1.1716 4.2424.0003z" fill="rgb(0,0,0)" fill-rule="evenodd"></path></svg>
-                    </button>
-                </div>
-        </article>
+        <div class="cardProductoOferta">
+            <!--Aca se generan las card de productos en Oferta-->
+        </div>
     </section>
     <section class="sectionContenedor ultimosIngresos">
         <header>
