Ajuste de ID en validador de Newsletter footers

--- a/contacto.html
+++ b/contacto.html
@@ -93,7 +93,7 @@
             </div>
         </div>
         <div class="formContacto" id="formContacto">
-            <div class="alerta" id="alertaMensaje"></div>
+            <div class="alerta" id="alertaMensajeNewsletter"></div>
             <form action="https://formspree.io/f/xldejveq" method="POST">
                 <div class="form-group">
                     <input id="formInputNombre" type="text" placeholder="Nombre *" name="nombre" >
@@ -122,12 +122,12 @@
                 <h3>Suscribite</h3>
                 <p class="footerText">Obtén un 10% off en tu primer orden</p>
                 <div class="footerInputContainer">
-                    <input type="text" id="emailInput" placeholder="Tu correo electrónico">
+                    <input type="text" id="emailInputNewsletterNewsletter" placeholder="Tu correo electrónico">
                     <button type="button" class="enviar" id="enviar">
                         <img src="./img/send_input.svg" alt="Enviar">
                     </button>
                 </div>
-                <p id="alertaMensaje" class="mensajeNewsletterFooter">Mensaje</p>
+                <p id="alertaMensajeNewsletterNewsletter" class="mensajeNewsletterFooter">Mensaje</p>
             </div>
             <div class="col col2">
                 <h3>Soporte</h3>
