--- a/nosotros.html
+++ b/nosotros.html
@@ -102,12 +102,12 @@
                 <h3>Suscribite</h3>
                 <p class="footerText">Obtén un 10% off en tu primer orden</p>
                 <div class="footerInputContainer">
-                    <input type="text" id="emailInput" placeholder="Tu correo electrónico">
+                    <input type="text" id="emailInputNewsletter" placeholder="Tu correo electrónico">
                     <button type="button" class="enviar" id="enviar">
                         <img src="./img/send_input.svg" alt="Enviar">
                     </button>
                 </div>
-                <p id="alertaMensaje" class="mensajeNewsletterFooter">Mensaje</p>
+                <p id="alertaMensajeNewsletter" class="mensajeNewsletterFooter">Mensaje</p>
             </div>
             <div class="col col2">
                 <h3>Soporte</h3>
