Primera parte del script de carrito y ajustes de estilos

--- a/carrito.html
+++ b/carrito.html
@@ -65,83 +65,43 @@
     <section class="principal">
         <div class="contenedorItemsCarrito">
             <div class="itemsCarrito">
-                <img class="imgThumbnail1" src="./img/imgProducto1.svg" alt="" class="img">
-                <div class="descripcionEliminar">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, consequatur!</p>
-                    <button class="eliminar">Eliminar</button>
+                <div class="contenedorIzq">
+                    <img class="imgThumbnail1" src="./img/imgProducto1.svg" alt="" class="img">
+                    <div class="nombreEliminar">
+                        <h2>Joystick PS5!</h2>
+                        <button class="eliminar">Eliminar</button>
+                    </div>
                 </div>
-                <div class="selectorCantidad">
-                    <button class="decrementar">−</button>
-                    <span class="cantidadProducto">1</span>
-                    <button class="incrementar">+</button>
-                </div>
-                <div class="precio">
-                    <p class="precioRegular">$1499</p>
-                    <p class="precioDescuento">$999</p>
-                </div>
-            </div>
-            <div class="itemsCarrito">
-                <img class="imgThumbnail1" src="./img/imgProducto1.svg" alt="" class="img">
-                <div class="descripcionEliminar">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, consequatur!</p>
-                    <button class="eliminar">Eliminar</button>
-                </div>
-                <div class="selectorCantidad">
-                    <button class="decrementar">−</button>
-                    <span class="cantidadProducto">1</span>
-                    <button class="incrementar">+</button>
-                </div>
-                <div class="precio">
-                    <p class="precioRegular">$1499</p>
-                    <p class="precioDescuento">$999</p>
+                <div class="contendorDer">
+                    <div class="selectorCantidad">
+                        <button class="decrementar">−</button>
+                        <span class="cantidadProducto">1</span>
+                        <button class="incrementar">+</button>
+                    </div>
+                    <div class="precio">
+                        <p class="precioRegular">$1499</p>
+                        <p class="precioDescuento">$999</p>
+                    </div>
                 </div>
             </div>
             <div class="itemsCarrito">
-                <img class="imgThumbnail1" src="./img/imgProducto1.svg" alt="" class="img">
-                <div class="descripcionEliminar">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, consequatur!</p>
-                    <button class="eliminar">Eliminar</button>
+                <div class="contenedorIzq">
+                    <img class="imgThumbnail1" src="./img/imgProducto1.svg" alt="" class="img">
+                    <div class="nombreEliminar">
+                        <h2>Joystick PS5!</h2>
+                        <button class="eliminar">Eliminar</button>
+                    </div>
                 </div>
-                <div class="selectorCantidad">
-                    <button class="decrementar">−</button>
-                    <span class="cantidadProducto">1</span>
-                    <button class="incrementar">+</button>
-                </div>
-                <div class="precio">
-                    <p class="precioRegular">$1499</p>
-                    <p class="precioDescuento">$999</p>
-                </div>
-            </div>
-            <div class="itemsCarrito">
-                <img class="imgThumbnail1" src="./img/imgProducto1.svg" alt="" class="img">
-                <div class="descripcionEliminar">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, consequatur!</p>
-                    <button class="eliminar">Eliminar</button>
-                </div>
-                <div class="selectorCantidad">
-                    <button class="decrementar">−</button>
-                    <span class="cantidadProducto">1</span>
-                    <button class="incrementar">+</button>
-                </div>
-                <div class="precio">
-                    <p class="precioRegular">$1499</p>
-                    <p class="precioDescuento">$999</p>
-                </div>
-            </div>
-            <div class="itemsCarrito">
-                <img class="imgThumbnail1" src="./img/imgProducto1.svg" alt="" class="img">
-                <div class="descripcionEliminar">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, consequatur!</p>
-                    <button class="eliminar">Eliminar</button>
-                </div>
-                <div class="selectorCantidad">
-                    <button class="decrementar">−</button>
-                    <span class="cantidadProducto">1</span>
-                    <button class="incrementar">+</button>
-                </div>
-                <div class="precio">
-                    <p class="precioRegular">$1499</p>
-                    <p class="precioDescuento">$999</p>
+                <div class="contendorDer">
+                    <div class="selectorCantidad">
+                        <button class="decrementar">−</button>
+                        <span class="cantidadProducto">1</span>
+                        <button class="incrementar">+</button>
+                    </div>
+                    <div class="precio">
+                        <p class="precioRegular">$1499</p>
+                        <p class="precioDescuento">$999</p>
+                    </div>
                 </div>
             </div>
         </div>
