--- a/wishlist.html
+++ b/wishlist.html
@@ -7,12 +7,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/generales.css">
+    <link rel="stylesheet" href="./css/breadcrumbs.css">
+    <link rel="stylesheet" href="./css/estilosHome.css">
+    <link rel="stylesheet" href="./css/estilosCarrito.css">
     <link rel="stylesheet" href="./css/header.css">
-    <link rel="stylesheet" href="./css/estilosLogin.css">
     <link rel="stylesheet" href="./css/footer.css">
-    <title>Inicio Sesion</title>
+    <title>wishlist</title>
 </head>
-<body>
+<body class="wishlist">
     <header id="header" class="header">
         <div class="sectionContenedor headerContenedor">
             <div class="logo">
@@ -56,26 +58,18 @@
             </div> 
         </div>
     </header>
-    <section class="sectionContenedor loginContenedor">
-        <div class="img">
-            <img src="./img/login.svg" alt="">
+    <section class="sectionContenedor breadcrumb">
+        <div class="ruta">
+            <a href="">Home</a>
+            <p>/</p>
+            <a href="">Carrito</a>
         </div>
-        <div class="contenedorForm login">
-            <h2 class="titulo">Crea una cuenta</h2>
-            <p class="texto">Completa tus datos</p>
-        <form action="#" class="form">
-            <input class="campos" type="text" placeholder="nombre" required>
-            <input class="campos" type="email" placeholder="Email" required>
-            <input class="campos" type="password" placeholder="Password" required>
-            <button type="submit" class="btn-primary">Crear una cuenta</button>
-            <button type="button" class="btnGoogle">
-                <img src="https://img.icons8.com/color/16/000000/google-logo.png" alt="Google logo"> Inicia sesion con Google
-            </button>
-        </form>
-        <p class="footerTexto">
-            ¿Ya tienes una cuenta? <a href="#">Iniciar Sesion</a>
-        </p>
+    </section>
+    <section class="sectionContenedor nuestrosProductos">
+        <div class="cardProductoOferta itemsWishlist">
+            <!-- Los productos se cargarán dinámicamente aquí -->
         </div>
+    </section>
     </section>
     <footer>
         <div class="sectionContenedor footerPrincipal">
