Fix problema con wishlist en home

--- a/carrito.html
+++ b/carrito.html
@@ -91,7 +91,9 @@
                 </div>
                 <div class="botones">
                     <button class="checkout">FINALIZAR COMPRA</button>
-                    <button class="continuarComprando">CONTINUAR COMPRANDO</button>
+                    <a href="./ofertas.html" style="display: contents;">
+                        <button class="continuarComprando">CONTINUAR COMPRANDO</button>
+                    </a>
                 </div>
             </div>
         </div>
