--- a/wishlist.html
+++ b/wishlist.html
@@ -62,7 +62,7 @@
         <div class="ruta">
             <a href="">Home</a>
             <p>/</p>
-            <a href="">Carrito</a>
+            <a href="">Wishlist</a>
         </div>
     </section>
     <section class="sectionContenedor nuestrosProductos">
