Ajustes de estilos en botones de galeria de productos

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                 <div class="infoTexto">
                     <h3>PlayStation 5</h3>
                     <p>En sus versiones en Blanco y Negro</p>
-                    <a href="./producto.html" class="btnCarrito">Ver más</a>
+                    <a href="./producto.html" class="btnCarritoGaleria">Ver más</a>
                 </div>
             </article>
             <article class="flyerNuevosProductos2">
@@ -322,7 +322,7 @@
                 <div class="infoTexto">
                     <h3>Parlante JBL</h3>
                     <p>Sonido potente y portátil para cualquier ocasión.</p>
-                    <a href="./producto.html" class="btnCarrito">Ver más</a>
+                    <a href="./producto.html" class="btnCarritoGaleria">Ver más</a>
                 </div>
             </article>
             <article class="flyerNuevosProductos3">
@@ -330,7 +330,7 @@
                 <div class="infoTexto">
                     <h3>Asistente Virtual Alexa</h3>
                     <p>Controla tu hogar inteligente con solo tu voz.</p>
-                    <a href="./producto.html" class="btnCarrito">Ver más</a>
+                    <a href="./producto.html" class="btnCarritoGaleria">Ver más</a>
                 </div>
             </article>
             <article class="flyerNuevosProductos4">
@@ -338,7 +338,7 @@
                 <div class="infoTexto">
                     <h3>Monitor Gaming</h3>
                     <p>Ideal para una experiencia de juego inmersiva.</p>
-                    <a href="./producto.html" class="btnCarrito">Ver más</a>
+                    <a href="./producto.html" class="btnCarritoGaleria">Ver más</a>
                 </div>
             </article>
         </section>
