--- a/ofertas.html
+++ b/ofertas.html
@@ -95,7 +95,7 @@
             <div class="infoTexto">
                 <h3>PlayStation 5</h3>
                 <p>En sus versiones en Blanco y Negro</p>
-                <a href="./producto.html" class="btnCarrito">Ver más</a>
+                <a href="./producto.html" class="btnCarritoGaleria">Ver más</a>
             </div>
         </article>
         <article class="flyerNuevosProductos2">
@@ -103,7 +103,7 @@
             <div class="infoTexto">
                 <h3>Parlante JBL</h3>
                 <p>Sonido potente y portátil para cualquier ocasión.</p>
-                <a href="./producto.html" class="btnCarrito">Ver más</a>
+                <a href="./producto.html" class="btnCarritoGaleria">Ver más</a>
             </div>
         </article>
         <article class="flyerNuevosProductos3">
@@ -111,7 +111,7 @@
             <div class="infoTexto">
                 <h3>Asistente Virtual Alexa</h3>
                 <p>Controla tu hogar inteligente con solo tu voz.</p>
-                <a href="./producto.html" class="btnCarrito">Ver más</a>
+                <a href="./producto.html" class="btnCarritoGaleria">Ver más</a>
             </div>
         </article>
         <article class="flyerNuevosProductos4">
@@ -119,7 +119,7 @@
             <div class="infoTexto">
                 <h3>Monitor Gaming</h3>
                 <p>Ideal para una experiencia de juego inmersiva.</p>
-                <a href="./producto.html" class="btnCarrito">Ver más</a>
+                <a href="./producto.html" class="btnCarritoGaleria">Ver más</a>
             </div>
         </article>
     </section>
