Ajustes de estilos y detalles generales finales

--- a/contacto.html
+++ b/contacto.html
@@ -124,12 +124,12 @@
                 <h3>Suscribite</h3>
                 <p class="footerText">Obtén un 10% off en tu primer orden</p>
                 <div class="footerInputContainer">
-                    <input type="text" id="emailInputNewsletterNewsletter" placeholder="Tu correo electrónico">
-                    <button type="button" class="enviar" id="enviar">
+                    <input type="text" id="emailInputNewsletter" placeholder="Tu correo electrónico">
+                    <button type="button" class="enviar" id="btnEnviarNewsletter">
                         <img src="./img/send_input.svg" alt="Enviar">
                     </button>
                 </div>
-                <p id="alertaMensajeNewsletterNewsletter" class="mensajeNewsletterFooter">Mensaje</p>
+                <p id="alertaMensajeNewsletter" class="mensajeNewsletterFooter">Mensaje</p>
             </div>
             <div class="col col2">
                 <h3>Soporte</h3>
@@ -142,7 +142,7 @@
                 <a class="footerLink" href="./login.html">Mi cuenta</a>
                 <a class="footerLink" href="./login.html">Iniciar Sesion / Registro</a>
                 <a class="footerLink" href="./carrito.html"> Carrito</a>
-                <a class="footerLink" href="./whislist.html">Lista de Deseos</a>
+                <a class="footerLink" href="./wishlist.html">Lista de Deseos</a>
                 <a class="footerLink" href="./producto.html">Tienda</a>
             </div>
             <div class="col col4">
