--- a/politicasDePrivacidad.html
+++ b/politicasDePrivacidad.html
@@ -102,7 +102,7 @@
                 <p class="footerText">Obtén un 10% off en tu primer orden</p>
                 <div class="footerInputContainer">
                     <input type="text" id="emailInputNewsletter" placeholder="Tu correo electrónico">
-                    <button type="button" class="enviar" id="enviar">
+                    <button type="button" class="enviar" id="btnEnviarNewsletter">
                         <img src="./img/send_input.svg" alt="Enviar">
                     </button>
                 </div>
@@ -119,7 +119,7 @@
                 <a class="footerLink" href="./login.html">Mi cuenta</a>
                 <a class="footerLink" href="./login.html">Iniciar Sesion / Registro</a>
                 <a class="footerLink" href="./carrito.html"> Carrito</a>
-                <a class="footerLink" href="./whislist.html">Lista de Deseos</a>
+                <a class="footerLink" href="./wishlist.html">Lista de Deseos</a>
                 <a class="footerLink" href="./producto.html">Tienda</a>
             </div>
             <div class="col col4">
