Página de Single Producto con llamada dinamica de productos y funciones de carrito y wishlis

--- a/producto.html
+++ b/producto.html
@@ -141,42 +141,8 @@
                 <a href="">></a>
             </nav>
         </header>
-        <article class="cardProducto">
-            <img src="https://dummyimage.com/480x4:3/" alt="">
-            <h3>Teclado Mecánico RGB</h3>
-            <p class="productoDescripción">Rendimiento y estilo en cada pulsación, ideal para trabajar y jugar.</p>
-            <div class="precio">
-                <p class="precioDescuento">$89</p>
-            </div>
-            <a href="./producto.html" class="btnCarrito">Ver más</a>
-        </article>
-        <article class="cardProducto">
-            <img src="https://dummyimage.com/480x4:3/" alt="">
-            <h3>Audífonos Noise Cancelling</h3>
-            <p class="productoDescripción">Silencia el ruido exterior y concéntrate en tu trabajo.</p>
-            <div class="precio">
-                <p class="precioDescuento">$119</p>
-            </div>
-            <a href="./producto.html" class="btnCarrito">Ver más</a>
-        </article>
-        <article class="cardProducto">
-            <img src="https://dummyimage.com/480x4:3/" alt="">
-            <h3>Escritorio Ajustable PRO</h3>
-            <p class="productoDescripción">Trabajá de pie o sentado con este escritorio ajustable en altura.</p>
-            <div class="precio">
-                <p class="precioDescuento">$249</p>
-            </div>
-            <a href="./producto.html" class="btnCarrito">Ver más</a>
-        </article>
-        <article class="cardProducto">
-            <img src="https://dummyimage.com/480x4:3/" alt="">
-            <h3>Mouse Ergonómico Vertical</h3>
-            <p class="productoDescripción">Cuida tu muñeca con este mouse ergonómico de diseño vertical.</p>
-            <div class="precio">
-                <p class="precioDescuento">$49</p>
-            </div>
-            <a href="./producto.html" class="btnCarrito">Ver más</a>
-        </article>
+        <div class="cardProductoRelacionados">
+        </div>
     </section>
     <footer>
         <div class="sectionContenedor footerPrincipal">
